# timescan

./: .clang-format  .gitignore  CMakeLists.txt
src/: FileManager.h  IFileSystem.h  PosixFileSystem.h  TimeManager.h  main.cpp  timescan.cpp
test/: dir_list.txt  file_list.txt  test_logic.cpp  timescan_test.cpp
